# TheLab

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.py  database.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
clients/: client_pool.py  gemini_client.py  llm_client.py  openai_client.py
docs/: api_reference.md  contributing.md  deployment_guide.md  developer_guide.md  project_structure.md  testing_guide.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.module.css  App.tsx  api.ts  main.tsx  routes.tsx
frontend/src/api/: auth.ts  chat.ts  config.ts  conversations.ts  documents.ts  files.ts  forum.ts  index.ts  messages.ts  search.ts  settings.ts  types.ts
frontend/src/components/: Navbar.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
migrations/: migrate_to_sessions_table.py
models/: forum.py  sessions.py  users.py
pipeline/: document_pipeline.py
prepdocs/: config.py  parse_images.py  parse_page.py  translate.py
rag/: knowledgebase.py
routers/: __init__.py  auth.py  conversations.py  documents.py  folders.py  forum.py  search.py  settings.py
services/: agent.py  auth.py  conversation_enhancer.py  delete_service.py  email.py  forum.py  session.py
tasks/: __init__.py  celery_app.py  document_tasks.py
tests/: conftest.py  test_auth.py  test_documents.py
tmp/: main.py  remove_tools.py
(+60 files in other folders)
